# sharpSAT

./: .gitignore  CMakeLists.txt  setupdev.sh
